feat(dashboard): page inicial + ajustes (ignora logs)